--- a/src/css/auth.scss
+++ b/src/css/auth.scss
@@ -21,7 +21,7 @@ body {
 }
 
 .bg-image {
-  background-image: url('../assets/bg/bg.jpg');
+  background-image: url('../assets/bg/bg.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -31,10 +31,9 @@ form {
   display: flex;
   flex-direction: column;
 
-  padding-bottom: 200px;
-
   > label {
     font-weight: 600;
+    display: flex;
   }
 
   > input {
@@ -67,19 +66,38 @@ h1 {
 button {
   border: none;
   border-radius: 4px;
+  cursor: pointer;
 
-  color: #111;
+  color: #fff;
 
-  padding: 4px;
+  padding: 10px 40px;
+
+  margin-top: 10px;
 
   transition: all 300ms;
 
   &:hover {
-    background-color: #e0e0e0;
+    background-color: #54545491;
   }
+
+  align-items: center;
+  background-color: #5454543d;
+  padding-right: 20px;
+  padding-left: 20px;
+  border-radius: 8px;
 }
 
 p {
   font-weight: 600;
   margin-top: 10px;
+}
+
+.glass {
+  backdrop-filter: blur(10px);
+  background: rgba(88, 88, 88, 0.2);
+  border-radius: 15px;
+  padding: 60px;
+  text-align: center;
+  color: #2b2b2b;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
